<resources>
    <string name="app_name">Home Car</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">The password should contain at least 8 characters, including at least one lower case letter, one upper case letter, one number and one punctuation mark</string>
    <string name="login_failed">"Login failed"</string>
    <string name="join_us">Join Us</string>
    <string name="enter_your_email_adress">Enter Your Email Address</string>
    <string name="enter_your_password">Enter Your PassWord</string>
    <string name="log_in">LOG IN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="or">or</string>
    <string name="creat_new_account">Creat new account</string>
    <string name="user_name">Name</string>
    <string name="email_adress">Email Address</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="new_offers">New Offers</string>
    <string name="nearest_garage">Nearest Garage</string>
    <string name="find_garage">Find Garage</string>
    <string name="find_in_all_garage">Search Garage</string>
    <string name="last_oper">Last Operations</string>
    <string name="all_opertions">All Opertions  You Do</string>
    <string name="search_for_garage">Find Best Garage For You</string>
    <string name="see_all">see all >></string>
    <string name="type_op">Type Operation</string>
    <string name="from">From</string>
    <string name="me">Me</string>
    <string name="to">To</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="price_for_hour">Price For Hour</string>
    <string name="reservation">Reservation</string>
    <string name="go_garage">"Go Garage"</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="setting">Settings</string>
    <string name="log_out">Log out</string>
    <string name="file_info_user">FileInfoUser</string>
    <string name="edit">edit_icon</string>
    <string name="newpassword">Add New Password ?</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_info">Edit Information</string>
    <string name="save">Save</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="expected_price">Expected Price</string>
    <string name="reservation_now">Reservation Now</string>
    <string name="expected_hour">Hour to Reservation</string>
    <string name="waiting_requst">Waiting</string>
    <string name="active_requst">Active</string>
    <string name="finshed_requst">Finshed</string>
    <string name="requst_type">Requst</string>
    <string name="accpet_type">Accpet</string>
    <string name="refusal_type">Refusal</string>
    <string name="pay_type">Pay</string>
    <string name="state_requst">State Requst</string>
    <string name="type_requst">Type Requst</string>
    <string name="garage_name">Garage Name</string>
    <string name="date">Date</string>
    <string name="cancel">Cancel</string>
    <string name="finshed">Finshed</string>
    <string name="done">Done</string>
    <string name="mobil">Mobil</string>
    <string name="balance">Balance</string>
    <string name="payment">Payment</string>
    <string name="balance_is_not_enough">Balance is not enough</string>
    <string name="Purchase">Purchase</string>
    <string name="amount">The Amount</string>
    <string name="purchase_now">Purchase Now</string>
    <string name="balance_details">Know your balance details</string>
    <string name="eg">E.G.</string>
    <string name="current_balance">Total balance is</string>
    <string name="welcome">Welcome</string>
    <string name="please_log">please log in to your account.</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="text_log">By pressing “submit” you agree to our</string>
    <string name="terms_conditions"><u>terms &amp; conditions</u></string>
    <string name="todo">TODO</string>
    <string name="please_sign_up">please sign up.</string>
    <string name="name_invalid">your name please</string>
    <string name="invalid_email">Email address please</string>
    <string name="invalid_phone">Telephone Number please</string>
    <string name="invalid_conform">Please re-enter the password</string>
    <string name="garage_scl">Garage selected</string>
    <string name="what_city">what is your city ?</string>
    <string name="click_here">Click here</string>
    <string name="address">Address</string>
    <string name="type">Type</string>
    <string name="created_date">Created Date</string>
    <string name="reservation_scheduling">Reservation scheduling</string>
    <string name="rate">Rate</string>
    <string name="ratings">Ratings</string>
    <string name="i_here">I\'m here</string>
    <string name="not_rate">Not rate after</string>
    <string name="governorate">Governorate</string>
    <string name="City">City</string>
    <string name="country">Country</string>
    <string name="me_location">Me</string>
    <string name="time_past">Time in the past</string>
    <string name="booking_expired">Booking expired</string>
    <string name="total">Total</string>
    <string name="round_time">Rotating</string>
    <string name="search_city">Search city</string>
    <string name="all_garage_in_city">All Garage in city</string>
    <string name="cost_reservation">Cost Reservation</string>
    <string name="your_balance">YOUR  BALANCE</string>
    <string name="purchase">purchase</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="get_location_automatic">get location automatic</string>
    <string name="cities_with_only_garages">Cities with only garages</string>
    <string name="Sorry_no_operations_yet">Sorry, you have no operations yet</string>
    <string name="rate_reservation">Rate The Reservation</string>
    <string name="skip">Skip</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="Password_Successfully_Modified">Password Successfully Modified</string>
    <string name="something_went_wrong">Something went wrong. Please try again later</string>
    <string name="old_pass_worng">The old password is wrong</string>
    <string name="ake_sure_password">Make sure to enter the old password</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="deposit">Deposit</string>
    <string name="connected_to_Internet">Connected to Internet</string>
    <string name="not_connected_to_internet">Not Connected to Internet</string>
    <string name="wifi_enabled">Wifi enabled</string>
    <string name="mobile_data_enabled">Mobile data enabled</string>
    <string name="goodbye">Goodbye 😢</string>
    <string name="coom_soon">Coming Soon 🤞</string>
    <string name="negative_money">Negative money cannot be entered</string>
    <string name="max_deposit">Max Deposit 10,000</string>
    <string name="your_favorite_arages">Your Favorite Garages</string>
    <string name="garage">Garage</string>
    <string name="remove_animation">Remove Animation</string>
    <string name="sotw_north">N</string>
    <string name="sotw_east">E</string>
    <string name="sotw_south">S</string>
    <string name="sotw_west">W</string>
    <string name="sotw_northeast">NE</string>
    <string name="sotw_northwest">NW</string>
    <string name="sotw_southeast">SE</string>
    <string name="sotw_southwest">SW</string>

</resources>