<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.sign.ForgetPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/forgot_password"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/orange" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_sent_rest"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_radius"
        android:drawablePadding="@dimen/_7sdp"
        android:hint="@string/email_adress"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_11sdp"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"/>

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@drawable/login_button"
        android:text="@string/btn_reset_password" />

    <ProgressBar
        android:id="@+id/progressBar_rest"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</LinearLayout>