<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.NewPasswordActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_old_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_radius"
        android:drawablePadding="@dimen/_7sdp"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:padding="@dimen/_11sdp"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_radius"
        android:drawablePadding="@dimen/_7sdp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="@dimen/_11sdp"
        android:password="true"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_old_pass" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_con_new_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_radius"
        android:drawablePadding="@dimen/_7sdp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:padding="@dimen/_11sdp"
        android:textAlignment="viewStart"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_new_pass" />

    <Button
        android:id="@+id/btn_new_pass_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_con_new_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>